// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeriodEqual should render correctly 1`] = `
<div>
  <div
    class="cds--number-input-wrapper"
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--number cds--number--helpertext cds--number-input-wrapper_carbon-input"
      >
        <div
          class="cds--number__input-wrapper"
        >
          <input
            aria-label="Numeric input field with increment and decrement buttons"
            data-testid="date-rule-period-equal"
            id="TestDateRuleElement"
            max="Infinity"
            min="-Infinity"
            name="TestDateRuleElement"
            pattern="[0-9]*"
            placeholder="Enter value"
            step="1"
            type="number"
            value="7"
          />
          <div
            class="cds--number__controls"
          >
            <button
              aria-atomic="true"
              aria-label="Increment number. Press Space or Enter in order to use icon."
              aria-live="polite"
              class="cds--number__control-btn up-icon"
              focusable="false"
              tabindex="-1"
              title="Increment number. Press Space or Enter in order to use icon."
              type="button"
              unselectable="on"
            >
              <svg
                aria-hidden="true"
                class="up-icon"
                focusable="false"
                height="4"
                preserveAspectRatio="xMidYMid meet"
                style="will-change: transform;"
                viewBox="0 0 8 4"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 4l4-4 4 4z"
                />
              </svg>
            </button>
            <button
              aria-atomic="true"
              aria-label="Decrement number. Press Space or Enter in order to use icon."
              aria-live="polite"
              class="cds--number__control-btn down-icon"
              focusable="false"
              tabindex="-1"
              title="Decrement number. Press Space or Enter in order to use icon."
              type="button"
              unselectable="on"
            >
              <svg
                aria-hidden="true"
                class="down-icon"
                focusable="false"
                height="4"
                preserveAspectRatio="xMidYMid meet"
                style="will-change: transform;"
                viewBox="0 0 8 4"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 0L4 4 0 0z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>

  </div>
</div>
`;

exports[`PeriodEqual should render correctly for read-only 1`] = `
<div>
  <span
    class="cds--text-space-left cds--rule-value-readonly"
  >
    7
  </span>
</div>
`;

exports[`PeriodEqual should render correctly with a month operator 1`] = `
<div>
  <div
    class="cds--number-input-wrapper"
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--number cds--number--helpertext cds--number-input-wrapper_carbon-input"
      >
        <div
          class="cds--number__input-wrapper"
        >
          <input
            aria-label="Numeric input field with increment and decrement buttons"
            data-testid="date-rule-period-equal"
            id="TestDateRuleElement"
            max="Infinity"
            min="-Infinity"
            name="TestDateRuleElement"
            pattern="[0-9]*"
            placeholder="Enter value"
            step="1"
            type="number"
            value="1"
          />
          <div
            class="cds--number__controls"
          >
            <button
              aria-atomic="true"
              aria-label="Increment number. Press Space or Enter in order to use icon."
              aria-live="polite"
              class="cds--number__control-btn up-icon"
              focusable="false"
              tabindex="-1"
              title="Increment number. Press Space or Enter in order to use icon."
              type="button"
              unselectable="on"
            >
              <svg
                aria-hidden="true"
                class="up-icon"
                focusable="false"
                height="4"
                preserveAspectRatio="xMidYMid meet"
                style="will-change: transform;"
                viewBox="0 0 8 4"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 4l4-4 4 4z"
                />
              </svg>
            </button>
            <button
              aria-atomic="true"
              aria-label="Decrement number. Press Space or Enter in order to use icon."
              aria-live="polite"
              class="cds--number__control-btn down-icon"
              focusable="false"
              tabindex="-1"
              title="Decrement number. Press Space or Enter in order to use icon."
              type="button"
              unselectable="on"
            >
              <svg
                aria-hidden="true"
                class="down-icon"
                focusable="false"
                height="4"
                preserveAspectRatio="xMidYMid meet"
                style="will-change: transform;"
                viewBox="0 0 8 4"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 0L4 4 0 0z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>

  </div>
</div>
`;

exports[`PeriodEqual should render correctly with a year operator 1`] = `
<div>
  <div
    class="cds--number-input-wrapper"
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--number cds--number--helpertext cds--number-input-wrapper_carbon-input"
      >
        <div
          class="cds--number__input-wrapper"
        >
          <input
            aria-label="Numeric input field with increment and decrement buttons"
            data-testid="date-rule-period-equal"
            id="TestDateRuleElement"
            max="Infinity"
            min="-Infinity"
            name="TestDateRuleElement"
            pattern="[0-9]*"
            placeholder="Enter value"
            step="1"
            type="number"
            value="2019"
          />
          <div
            class="cds--number__controls"
          >
            <button
              aria-atomic="true"
              aria-label="Increment number. Press Space or Enter in order to use icon."
              aria-live="polite"
              class="cds--number__control-btn up-icon"
              focusable="false"
              tabindex="-1"
              title="Increment number. Press Space or Enter in order to use icon."
              type="button"
              unselectable="on"
            >
              <svg
                aria-hidden="true"
                class="up-icon"
                focusable="false"
                height="4"
                preserveAspectRatio="xMidYMid meet"
                style="will-change: transform;"
                viewBox="0 0 8 4"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 4l4-4 4 4z"
                />
              </svg>
            </button>
            <button
              aria-atomic="true"
              aria-label="Decrement number. Press Space or Enter in order to use icon."
              aria-live="polite"
              class="cds--number__control-btn down-icon"
              focusable="false"
              tabindex="-1"
              title="Decrement number. Press Space or Enter in order to use icon."
              type="button"
              unselectable="on"
            >
              <svg
                aria-hidden="true"
                class="down-icon"
                focusable="false"
                height="4"
                preserveAspectRatio="xMidYMid meet"
                style="will-change: transform;"
                viewBox="0 0 8 4"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 0L4 4 0 0z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>

  </div>
</div>
`;
